some more renaming fixes, not done yet

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11219,7 +11219,7 @@ PROV3221;Coast of the Gilbert Islands;Côte des Îles Gilbert;Küste der Gilbert-In
 PROV3222;Mainu Reef;Récif de Mainu;Mainu-Riff;;Arrecife de Mainu;;;;;;;;;
 PROV3223;Tusei Bank;Banc de Tusei ;Tusei Bank;;Banco de Tusei;;;;;;;;;
 PROV3224;Lake Tana;Lac Tana;Tanasee;;Lago Tana;;;;;;;;;
-PROV3225;Gran Lago Salado;Gran Lago Salado;Gran Lago Salado;;Gran Lago Salino;;;;;;;;;
+PROV3225;Great Salt Lake;Great Salt Lake;Great Salt Lake;;Great Salt Lake;;;;;;;;;
 PROV3226;South Australian Plain;Plaine australienne méridionale;Südaustralische Ebene;;Litoral meridional de Australian ;;;;;;;;;
 PROV3227;Great Slave Lake;Grand lac des esclaves;Großer Sklavensee;;Gran Lago del Esclavo;;;;;;;;;
 PROV3228;Lake Athabasca;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
