wait I found a bug

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -360,7 +360,7 @@ PROV683;Waldenburg;;;;;;;;;;;;;
 PROV43;Nabiti;;;;;;;;;;;;;
 PROV134;Ebi Hunu'bi;;;;;;;;;;;;;
 PROV135;Wewap;;;;;;;;;;;;;
-PROV85;Sonoma;;;;;;;;;;;;;
+PROV85;Bitakomtara;;;;;;;;;;;;;
 FRA_1901;Houet;;;;;;;;;;;;;
 FRA_1904;Gurma;;;;;;;;;;;;;
 ASH_1910;Volta;;;;;;;;;;;;;
