--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -554,3 +554,29 @@ MOD_constitutional_empire;Modena-Reggio;;;;;;;;;;;;;
 GER_liberal_2;Nationalliberale;Nationalliberale ;Nationalliberale ;;Nationalliberale ;;;;;;;;;
 GER_conservative_3;Freikonservative Partei;;;;;;;;;;;;;
 GER_reactionary_2;Deutschkonservative Partei;Nationale Partei;Nationale Partei;;Nationale Partei;;;;;;;;;
+SLU;The Slavic Union;;;;;;;;;;;;;
+SLU_proletarian_dictatorship;The Slavic Commune;;;;;;;;;;;;;
+SLU_presidential_dictatorship;The Slavic Republic;;;;;;;;;;;;;
+SLU_radical_republic;Republic of the Slavs;;;;;;;;;;;;;
+SLU_fascist_dictatorship;The Great Slavic National State;;;;;;;;;;;;;
+SLU_theocracy;The Patriarchate of All Slavs and the Prince-Bishopric of Montenegro;;;;;;;;;;;;;
+SLU_absolute_monarchy;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_prussian_constitutionalism;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_hms_government;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_absolute_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_semi_constitutional_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_constitutional_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_ADJ;Slavic;;;;;;;;;;;;;
+SLU_theocracy_ADJ;Slavo-Montenegrin;;;;;;;;;;;;;
+SLU_conservative;Šturovites;;;;;;;;;;;;;
+SLU_conservative_1;Slavic Christian Union;;;;;;;;;;;;;
+SLU_liberal;Palackites;;;;;;;;;;;;;
+SLU_liberal_1;Constitutional Democratic Party;;;;;;;;;;;;;
+SLU_reactionary;Slavophiles;;;;;;;;;;;;;
+SLU_reactionary_1;All-Slavic Black Veche;;;;;;;;;;;;;
+SLU_radical;Sabinites;;;;;;;;;;;;;
+SLU_radical_1;National Revolutionary Congress;;;;;;;;;;;;;
+SLU_socialist_1;Socialist Revolutionary Party;;;;;;;;;;;;;
+SLU_socialist_2;Labour Party;;;;;;;;;;;;;
+SLU_communist;Communist Party;;;;;;;;;;;;;
+SLU_fascist;All-Slavic National Radical Party;;;;;;;;;;;;;
