New Orleans becomes a disgusting marshland

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -475,7 +475,7 @@ cleveland;Forest;;;;;;;;;;;;;
 detroit;Forest;;;;;;;;;;;;;
 pittsburgh;Grassland Hills;;;;;;;;;;;;;
 richmond;Farmlands;;;;;;;;;;;;;
-neworleans;Grassland;;;;;;;;;;;;;
+neworleans;Marsh;;;;;;;;;;;;;
 austin;Steppe;;;;;;;;;;;;;
 caen;Farmlands;;;;;;;;;;;;;
 lille;Farmlands;;;;;;;;;;;;;
