--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1171,3 +1171,4 @@ mepuri;Mepuri;;;;;;;;;;;;
 tukano;Tukano;;;;;;;;;;;;
 guahibo;Guahibo;;;;;;;;;;;;
 pueblo;Pueblo;;;;;;;;;;;;
+mormon_culture;Mormon;;;;;;;;;;;;
