--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -338,3 +338,5 @@ yuc_apply_statehood_title;Apply for American Annexation;;;;;;;;;;;;;
 yuc_apply_statehood_desc;Time has passed since we have achieved independence, but our resources constantly run low, the centralist threat from Mexico City stands strong, and our brothers to the South have fragmented, we can only hope American annexation can serve us better.;;;;;;;;;;;;;
 yuc_join_uca_title;Join the Central Americans!;;;;;;;;;;;;;
 yuc_join_uca_desc;Time has passed since we have achieved independence, but our resources constantly run low and the centralist threat from Mexico City stands strong. It's time we look south and join our Central American brothers!;;;;;;;;;;;;;
+guerrero_rule;Guerrero's Rule;;;;;;;;;;;;;
+guerrero_rule_desc;Vicente Guerrero is back in power and in a better position to impose his liberal ideas in Mexico, although, as a conciliatory person, members of the conservative party have been allowed once again important positions in his cabinet, weakening his power over the nation and having a grudge against the coloured leader.;;;;;;;;;;;;;
