--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10461,7 +10461,7 @@ PROV2314;Potosí;Potosi;Potosi;;Potosí;;;;;;;;;
 PROV2315;Tupiza;Tupiza;Tupiza;;Tupiza;;;;;;;;;
 PROV2316;Guarasug'we;Guarasug'we;Guarasug'we;;Guarasug'we;;;;;;;;;
 PROV2317;Santiago de Chiquitos;Santiago de Chiquitos;Santiago de Chiquitos;;Santiago de Chiquitos;;;;;;;;;
-PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
+PROV2318;Kaa Iya;Kaa Iya;Kaa Iya;;Kaa Iya;;;;;;;;;
 PROV2319;Ixiamas;;;;;;;;;;;;;
 PROV2320;Huisruhuaina;Huisruhuaina;Huisruhuaina;;Huisruhuaina;;;;;;;;;
 PROV2321;Hawamano;Hawamano;Hawamano;;Hawamano;;;;;;;;;
@@ -10504,9 +10504,9 @@ PROV2360;Paraná;Parana;Parana;;Paraná;;;;;;;;;
 PROV2361;Sancti Spiritu;Santa Espiritu;Santa Espiritu;;Espíritu Santo;;;;;;;;;
 PROV2362;Jaaukanigás;Jaaukanigás;Jaaukanigás;;Jaaukanigás;;;;;;;;;
 PROV2363;Rosario;Rosario;Rosario;;Rosario;;;;;;;;;
-PROV2364;San Fernando;San Fernando;San Fernando;;San Fernando;;;;;;;;;
-PROV2365;Aviauck Tadaek;Aviauck Tadaek;Aviauck Tadaek;;Aviauck Tadaek;;;;;;;;;
-PROV2366;Pira-Ne;Pira-Ne;Pira-Ne;;Pira-Ne;;;;;;;;;
+PROV2364;Charadai;Charadai;Charadai;;Charadai;;;;;;;;;
+PROV2365;Aviak nun Tadaek;Aviak nun Tadaek;Aviak nun Tadaek;;Aviak nun Tadaek;;;;;;;;;
+PROV2366;Tacaaglé;Tacaaglé;Tacaaglé;;Tacaaglé;;;;;;;;;
 PROV2368;Salta;Salta;Salta;;Salta;;;;;;;;;
 PROV2369;Jujuy;Jujuy;Jujuy;;Jujuy;;;;;;;;;
 PROV2370;Susquis;Susquis;Susquis;;Susquis;;;;;;;;;
@@ -10515,7 +10515,7 @@ PROV2373;Tucumán;Tucuman;Tucuman;;Tucumán;;;;;;;;;
 PROV2374;Catamarca;Catamarca;Catamarca;;Catamarca;;;;;;;;;
 PROV2375;Vinchina;Vinchina;Vinchina;;Vinchina;;;;;;;;;
 PROV2376;Santiago del Estero;Santiago del Estero;Santiago del Estero;;Santiago del Estero;;;;;;;;;
-PROV2377;Anyatuya;Anatuya;Anatuya;;Anatuya;;;;;;;;;
+PROV2377;Otumpa;Otumpa;Otumpa;;Otumpa;;;;;;;;;
 PROV2378;Sumampa;Sumampa;Sumampa;;Sumampa;;;;;;;;;
 PROV2379;Córdoba;Córdoba;Córdoba;;Córdoba;;;;;;;;;
 PROV2380;Villa Nueva;Villa Nueva;Villa Nueva;;Villa Nueva;;;;;;;;;
