--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -3278,11 +3278,11 @@ EVT97006OPTA;For the glory of $COUNTRYNAME$!;;;;;;;;;;;;;
 EVTNAME97007;The Occupation of Mozambique;;;;;;;;;;;;;
 EVTDESC97007;Our forces are slowly pacifying the Mozambican countryside. If we are fortunate, we will one day be able to connect our African colonies.;;;;;;;;;;;;;
 EVTNAME97008;Zanzibar Purchase;;;;;;;;;;;;;
-EVTDESC97008;$FROMCOUNTRY$ has offered to sell the Zanzibar coast to our current colonial administration in Tanganyika. It seems like a reasonable deal.;;;;;;;;;;;;;
+EVTDESC97008;A fellow power has offered to sell the Zanzibar coast to our current colonial administration in Tanganyika. It seems like a reasonable deal.;;;;;;;;;;;;;
 EVT97008OPTA;Accept the offer.;;;;;;;;;;;;;
 EVT97008OPTB;Reject the offer.;;;;;;;;;;;;;
 EVTNAME97009;Mombasa Purchase;;;;;;;;;;;;;
-EVTDESC97009;$FROMCOUNTRY$ has offered to sell the Mombasa coast to our current colonial administration in Kenya. It seems like a reasonable deal.;;;;;;;;;;;;;
+EVTDESC97009;A fellow power has offered to sell the Mombasa coast to our current colonial administration in Kenya. It seems like a reasonable deal.;;;;;;;;;;;;;
 EVTNAME97010;The $COUNTRY_ADJ$ Colonies;;;;;;;;;;;;;
 EVTDESC97010;We have received an ultimatum from $FROMCOUNTRY$: surrender our colonies between Angola and Mozambique or suffer the consequences. The Portuguese people feel this is an incredible betrayal by the $FROMCOUNTRY_ADJ$. They have traditionally been our ally, and now they are trying to bully our rightful colonial holdings out of us? It cannot be borne!;;;;;;;;;;;;;
 EVTDESCPIONEEEROTHER;We have received an ultimatum from $FROMCOUNTRY$: surrender our colonies between Angola and Mozambique or suffer the consequences. The $COUNTRY_ADJ$ people feel this is an act of war by the $FROMCOUNTRY_ADJ$. It cannot be borne!;;;;;;;;;;;;;
