Patagonia provs revisited

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10475,9 +10475,9 @@ PROV2330;Cauquenes;Cauquenes;Cauquenes;;Cauquenes;;;;;;;;;
 PROV2331;Chillán;Chillan;Chillan;;Chillán;;;;;;;;;
 PROV2332;Osorno;Osorno;Osorno;;Osorno;;;;;;;;;
 PROV2333;Achén;Puerto Aisen;Puerto Aisen;;Puerto Aisen;;;;;;;;;
-PROV2334;Tawókser;Tawókser;Tawókser;;Tawókser;;;;;;;;;
-PROV2335;Karkamke;Porvenir;Porvenir;;Porvenir;;;;;;;;;
-PROV2336;Easter Island;Île de Pâques;Osterinsel;;Isla de Pascua;;;;;;;;;
+PROV2334;Toljkoskn;Toljkoskn;Toljkoskn;;Toljkoskn;;;;;;;;;
+PROV2335;Ayu-kenke'n;Ayu-kenke'n;Ayu-kenke'n;;Ayu-kenke'n;;;;;;;;;
+PROV2336;Rapa Nui;Rapa Nui;Rapa Nui;;Rapa Nui;;;;;;;;;
 PROV2337;Yexwase' Yamelkyet;Yexwase' Yamelkyet;Yexwase' Yamelkyet;;Yexwase' Yamelkyet;;;;;;;;;
 PROV2338;Puerto Guaraní;Puerto Guarani;Puerto Guarani;;Puerto Guaraní;;;;;;;;;
 PROV2339;Asuncion;Asunción;Asuncion;;Asunción;;;;;;;;;
@@ -10533,11 +10533,11 @@ PROV2392;Mercedes de Patagones;Viedma;Viedma;;Viedma;;;;;;;;;
 PROV2393;Trenquélaunquén;Trenquélaunquén;Trenquélaunquén;;Trenquélaunquén;;;;;;;;;
 PROV2394;Furilu-che;Furilu-che;Furilu-che;;Furilu-che;;;;;;;;;
 PROV2395;Puel Levn;Puel Levn;Puel Levn;;Puel Levn;;;;;;;;;
-PROV2396;Tshúbat;Tshúbat;Tshúbat;;Tshúbat;;;;;;;;;
+PROV2396;Kübübü;Kübübü;Kübübü;;Kübübü;;;;;;;;;
 PROV2397;Yalálaw-bat;Yalálaw-bat;Yalálaw-bat;;Yalálaw-bat;;;;;;;;;
-PROV2398;Koluel Kayke;Koluel Kayke;Koluel Kayke;;Koluel Kayke;;;;;;;;;
-PROV2399;Güer Aike;Güer Aike;Güer Aike;;Güer Aike;;;;;;;;;
-PROV2400;Oroskl;Oroskl;Oroskl;;Oroskl;;;;;;;;;
+PROV2398;Makenke Aike;Makenke Aike;Makenke Aike;;Makenke Aike;;;;;;;;;
+PROV2399;Güi:ien Aike;Güi:ien Aike;Güi:ien Aike;;Güi:ien Aike;;;;;;;;;
+PROV2400;Hahaael;Hahaael;Hahaael;;Hahaael;;;;;;;;;
 PROV2401;Marabitanas;Marabitanas;Marabitanas;;Marabitanas;;;;;;;;;
 PROV2402;Manaus;Manaus;Manaus;;Manaos;;;;;;;;;
 PROV2403;Cachoeira;Cachoeira;Cachoeira;;Cachoeira;;;;;;;;;
