--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1337,7 +1337,7 @@ PROV3946;Oristano;;;;;;;;;;;;;
 PROV3947;Dolores;;;;;;;;;;;;;
 PROV3948;K'la-Rome-Kó;;;;;;;;;;;;;
 PROV3949;Chod-Malal;;;;;;;;;;;;;
-PROV3950;Cháltel;;;;;;;;;;;;;
+PROV3950;I-Keu-Kenk;;;;;;;;;;;;;
 PROV3951;Sululta;;;;;;;;;;;;;
 PROV3952;Arkiko;;;;;;;;;;;;;
 PROV3953;Dallol;;;;;;;;;;;;;
