Alsina's Ditch and way too many cores

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -472,7 +472,7 @@ PROV2526;Phoenix and Line Islands;;;;;;;;;;;;;
 TIB_1591;Tibetan Plateau;;;;;;;;;;;;;
 PEU_2289;Oriente;;;;;;;;;;;;;
 PROV2482;Van Diemen's Land;;;;;;;;;;;;;
-PROV2382;Trapal-kó;;;;;;;;;;;;;
+PROV2382;Chimeko;;;;;;;;;;;;;
 PROV1071;Qeshm;;;;;;;;;;;;;
 PROV2786;Gulf of Oman;;;;;;;;;;;;;
 PROV2787;Hormuz Strait;;;;;;;;;;;;;
@@ -1478,3 +1478,5 @@ PROV4121;Augusta;;;;;;;;;;;;;
 PROV4122;Jeffersonville;;;;;;;;;;;;;
 PROV4123;Santafé;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
+PROV4124;Travun-qué Laufquen;;;;;;;;;;;;;
+PROV4125;Chillhue;;;;;;;;;;;;;
