--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10490,10 +10490,10 @@ PROV2345;Paysandú;Paysandú;Paysandu;;Paysandú;;;;;;;;;
 PROV2346;Santo Eugênio;Santo Eugênio;Santo Eugênio;;Santo Eugênio;;;;;;;;;
 PROV2347;Melo;Melo;Melo;;Melo;;;;;;;;;
 PROV2348;Buenos Aires;Buenos Aires;Buenos Aires;;Buenos Aires;;;;;;;;;
-PROV2350;Calfuleufú;Calfuleufú;Calfuleufú;;Calfuleufú;;;;;;;;;
-PROV2349;Junín;Junín;Junín;;Junín;;;;;;;;;
-PROV2352;Thavlil;Thavlil;Thavlil;;Thavlil;;;;;;;;;
-PROV2353;Quetrem Huitrú;Quetrem Huitrú;Quetrem Huitrú;;Quetrem Huitrú;;;;;;;;;
+PROV2350;Callvú Leovú;Callvú Leovú;Callvú Leovú;;Callvú Leovú;;;;;;;;;
+PROV2349;San Nicolás;San Nicolás;San Nicolás;;San Nicolás;;;;;;;;;
+PROV2352;Thaun-liI;Thaun-liI;Thaun-liI;;Thaun-liI;;;;;;;;;
+PROV2353;Trapalkén;Trapalkén;Trapalkén;;Trapalkén;;;;;;;;;
 PROV2354;Bahía Blanca;Bahia Blanca;Bahia Blanca;;Bahía Blanca;;;;;;;;;
 PROV2355;Kuvün Leuwvü;Kuvün Leuwvü;Kuvün Leuwvü;;Kuvün Leuwvü;;;;;;;;;
 PROV2356;Corrientes;Corrientes;Corrientes;;Corrientes;;;;;;;;;
@@ -10521,18 +10521,18 @@ PROV2379;Córdoba;Córdoba;Córdoba;;Córdoba;;;;;;;;;
 PROV2380;Villa Nueva;Villa Nueva;Villa Nueva;;Villa Nueva;;;;;;;;;
 PROV2381;Río Cuarto;Río Cuarto;Río Cuarto;;Río Cuarto;;;;;;;;;
 PROV2383;San Luis;San Luis;San Luis;;San Luis;;;;;;;;;
-PROV2384;Chalesque;Chalesque;Chalesque;;Chalesque;;;;;;;;;
+PROV2384;Kawelluwe;Kawelluwe;Kawelluwe;;Kawelluwe;;;;;;;;;
 PROV2385;La Rioja;Rioja;La Rioja;;La Rioja;;;;;;;;;
 PROV2386;Olta;Olta;Olta;;Olta;;;;;;;;;
 PROV2387;San Juan;San Juan;San Juan;;San Juan;;;;;;;;;
 PROV2388;Iglesia;Iglesia;Iglesia;;Iglesia;;;;;;;;;
 PROV2389;Mendoza;Mendoza;Mendoza;;Mendoza;;;;;;;;;
-PROV2390;Chansiquil;Chansiquil;Chansiquil;;Chansiquil;;;;;;;;;
+PROV2390;Atuel-Leuvú;Atuel-Leuvú;Atuel-Leuvú;;Atuel-Leuvú;;;;;;;;;
 PROV2391;Newenken;Newenken;Newenken;;Newenken;;;;;;;;;
-PROV2392;Mercedes de Patagones;Viedma;Viedma;;Viedma;;;;;;;;;
-PROV2393;Trenquélaunquén;Trenquélaunquén;Trenquélaunquén;;Trenquélaunquén;;;;;;;;;
+PROV2392;Patagones;Patagones;Patagones;;Patagones;;;;;;;;;
+PROV2393;Lewfü-Ko;Lewfü-Ko;Lewfü-Ko;;Lewfü-Ko;;;;;;;;;
 PROV2394;Furilu-che;Furilu-che;Furilu-che;;Furilu-che;;;;;;;;;
-PROV2395;Puel Levn;Puel Levn;Puel Levn;;Puel Levn;;;;;;;;;
+PROV2395;Limeñ-Mahuida;Limeñ-Mahuida;Limeñ-Mahuida;;Limeñ-Mahuida;;;;;;;;;
 PROV2396;Kübübü;Kübübü;Kübübü;;Kübübü;;;;;;;;;
 PROV2397;Yalálaw-bat;Yalálaw-bat;Yalálaw-bat;;Yalálaw-bat;;;;;;;;;
 PROV2398;Makenke Aike;Makenke Aike;Makenke Aike;;Makenke Aike;;;;;;;;;
