--- a/GFM/localisation/00_NNM_countries.csv
+++ b/GFM/localisation/00_NNM_countries.csv
@@ -124,10 +124,12 @@ PBC_presidential_dictatorship_ADJ;Peru-Bolivian;;;;;;;;;;;;;
 PLS_anarcho_liberal;Al Anarkiliberali;;;;;;;;;;;;;
 PHL_anarcho_liberal;Partido Libertad;Partido Libertad;Partido Libertad;;;;;;;;;;;
 PNJ_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-PNJ_absolute_monarchy;Khalasa Raj;;;;;;;;;;;;;
-PNJ_prussian_constitutionalism;Khalasa Raj;;;;;;;;;;;;;
+PNJ_absolute_monarchy;Sikh Empire;;;;;;;;;;;;;
+PNJ_prussian_constitutionalism;Sikh Empire;;;;;;;;;;;;;
+PNJ_hms_government;Sikh Empire;;;;;;;;;;;;;
 PNJ_absolute_monarchy_ADJ;Sikh;;;;;;;;;;;;;
 PNJ_prussian_constitutionalism_ADJ;Sikh;;;;;;;;;;;;;
+PNJ_hms_government_ADJ;Sikh;;;;;;;;;;;;;
 PRI_anarcho_liberal;Partido Anarchista;Partido Anarchista;Partido Anarchista;;;;;;;;;;;
 PTG_anarcho_liberal;The Radical Faction;;;;;;;;;;;;;
 QLD_anarcho_liberal;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;;
