Pampas positions and names, Chaco cores, and a lot of back pain

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10492,7 +10492,7 @@ PROV2347;Melo;Melo;Melo;;Melo;;;;;;;;;
 PROV2348;Buenos Aires;Buenos Aires;Buenos Aires;;Buenos Aires;;;;;;;;;
 PROV2350;Callvú Leovú;Callvú Leovú;Callvú Leovú;;Callvú Leovú;;;;;;;;;
 PROV2349;San Nicolás;San Nicolás;San Nicolás;;San Nicolás;;;;;;;;;
-PROV2352;Thaun-liI;Thaun-liI;Thaun-liI;;Thaun-liI;;;;;;;;;
+PROV2352;Thaun-lil;Thaun-lil;Thaun-lil;;Thaun-lil;;;;;;;;;
 PROV2353;Trapalkén;Trapalkén;Trapalkén;;Trapalkén;;;;;;;;;
 PROV2354;Bahía Blanca;Bahia Blanca;Bahia Blanca;;Bahía Blanca;;;;;;;;;
 PROV2355;Kuvün Leuwvü;Kuvün Leuwvü;Kuvün Leuwvü;;Kuvün Leuwvü;;;;;;;;;
