Half of Event Chain LOC

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -71,3 +71,33 @@ tapanahony_question_fra_win;Russia has awarded Tapanahony to France, ignoring th
 tapanahony_question_net_win;Russia has awarded Tapanahony to the Netherlands, ignoring our rightful claims on the region. It seems like this is only motivated by the fact that the Russians are closer to the Netherlands than to us, and not by their position of neutrality.;;;;;;;;;;;;;
 fra_dispute_refuse_desc;Tapanahony has been awarded to us, but the French have rejected the results of the arbitration justifying it and negating that our arbitrator was neutral and impartial in their veredict. We should act before war is declared against us.;;;;;;;;;;;;;
 net_dispute_refuse_desc;Tapanahony has been awarded to us, but the Netherlands has rejected the results of the arbitration justifying it by negating that our arbitrator was neutral and impartial in their verdict, not relinquishing their claims on the territory. We should act to put in place our claims on the region and cut down to size the Netherlands.;;;;;;;;;;;;;
+SWEDENSITUATION_TITLE;The Reign of King Charles XIV John;;;;;;;;;;;;;
+SWEDENSITUATION_DESC;
+DEATHCHARLESXIV_TITLE;The Death of King Charles XIV John;;;;;;;;;;;;;
+DEATHCHARLESXIV_DESC;
+SWEDENSHEIR_TITLE;We need to choose an heir;;;;;;;;;;;;;
+SWEDENSHEIR_DESC;
+KINGOSCAR_I_TITLE;Prince Oscar Bernadotte;;;;;;;;;;;;;
+KINGOSCAR_I_DESC;
+KINGAUGUSTUS_I_TITLE;Duke Augustus von Holstein-Gottorp;;;;;;;;;;;;;
+KINGAUGUSTUS_I_DESC;
+KINGCHRISTIAN_III_TITLE;King Christian XIII;;;;;;;;;;;;;
+KINGCHRISTIAN_III_DESC;
+ACCEPT_ASKING_DENAMARK_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+ACCEPT_ASKING_DENAMARK_DESC;
+REFUSE_ASKING_DENMARK_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+REFUSE_ASKING_DENMARK_DESC;
+DENMARK_ACCEPTED_TITLE;The Kalmar Union;;;;;;;;;;;;;
+DENMARK_ACCEPTED_DESC;
+DENMARK_REFUSED_TITLE;Choosing a new heir;;;;;;;;;;;;;
+DENMARK_REFUSED_DESC;
+ACCEPT_ASKING_OLDENBURG_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+ACCEPT_ASKING_OLDENBURG_DESC;
+REFUSE_ASKING_OLDENBURG_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+REFUSE_ASKING_OLDENBURG_DESC;
+OLDENBURG_ACCEPTED_TITLE;Glory to Augustus King of Sweden;;;;;;;;;;;;;
+OLDENBURG_ACCEPTED_DESC;
+OLDENBURG_REFUSED_TITLE;Choosing a new heir;;;;;;;;;;;;;
+OLDENBURG_REFUSED_DESC;
+OUR_LAST_HOPE_TITLE;The last hope;;;;;;;;;;;;;
+OUR_LAST_HOPE_DESC;
