Events and Decision for Swedish Empire

--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -295,3 +295,5 @@ NORMAL_CIVIL_WAR_NAME_SWI_NCT;The Sonderbund War;;;;;;;;;;;;;
 NORMAL_WAR_BOXER_NAME;The Boxer Rebellion;$ORDER$ rébellion des Boxers;$ORDER$Boxer Aufstand;;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;
 AGRESSION_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;
+CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_SWE_DNN;The Scandinavian War;;;;;;;;;;;;;
+NORMAL_WAR_ALL_CORES_NAME_SWE_PRU;$ORDER$Pomeranian War;;;;;;;;;;;;;
