chusan islands treaty port + event chain

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -975,7 +975,7 @@ gold_coast_treaty_desc;We have experienced numerous conflicts with the Dutch gov
 ultimatum_to_portugal_title;Send Ultimatum to Portugal;;;;;;;;;;;;;
 ultimatum_to_portugal_desc;§RGain 4 infamy§! It is in the British government's best interests to expand our colonies in southern Africa northwards. This will be impossible if the Portuguese complete their dreams of the 'Pink Map' by connecting Angola and Mozambique. We must make our demand or face the possibility of surrendering central Africa to other powers.;;;;;;;;;;;;;
 treaty_of_nanking_title;Treaty of Nanking;;;;;;;;;;;;;
-treaty_of_nanking_desc;§RGain 1 infamy§! Using our new influence with the Chinese government, we can force them to the table and extract trade and territory concessions-- not the least of which will be the cession of Hong Kong, a valuable port to possess on the southern seas.;;;;;;;;;;;;;
+treaty_of_nanking_desc;§RGain 1 infamy§! Using our new influence with the Chinese government, we can force them to the table and extract trade and territory concessions-- not the least of which will be the cession of Hong Kong, a valuable port to possess on the southern seas. Additionally, we will secure control of the Chusan Islands near Shanghai for the next 5 years so as to ensure that the Chinese uphold their end of the treaty.;;;;;;;;;;;;;
 simla_convention_title;The Simla Convention;;;;;;;;;;;;;
 simla_convention_desc;Now that Tibet is a free nation, it might be prudent for our government to step forward and broker an arrangement. Tibet could be a useful ally, and anything that weakens the Chinese government is not an opportunity to pass up.;;;;;;;;;;;;;
 become_yemen_title;Become Yemen;;;;;;;;;;;;;
