ai decision modulation

--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -676,4 +676,4 @@ papal_infallibility;Papal Infallibility;;;;;;;;;;;;;
 papal_infallibility_desc;The Papacy has convened an Ecumenical Council, reaffirming and strengthening the doctrine of Papal infallibility. Already, many of the clergy within the church are being weaponized into the hands of the Papal government, being used to spread the message day and night of the divine right and power of the Vicar of Christ.;;;;;;;;;;;;;
 crusade;Crusade...?;;;;;;;;;;;;;
 crusade_desc;A...crusade has been called, ill-defined as its goals may be, and the state has taken this as exceptional consideration to justify wars against those infidels on far-off shores, and equally those on the continent.;;;;;;;;;;;;;
-otherworldy_force;Modifier to adapt AI movement to uncolonized provinces.;;;;;;;;;;;;;
+otherworldy_force;Modifier to prevent AI Movement to Uncolonized Provinces;;;;;;;;;;;;;
