--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -66,7 +66,7 @@ VTU_colonial_company_3;Neue Hebriden;;;;;;;;;;;;;
 VTU_colonial_company_4;Kawanazu;;;;;;;;;;;;;
 BEL_colonial_company;Flandern-Wallonien;;;;;;;;;;;;;
 MSK_colonial_company;Reserva Mosquitia;;;;;;;;;;;;;
-BLZ_colonial_company;Crown Colony of Honduras;;;;;;;;;;;;;
+BLZ_colonial_company;British Honduras;;;;;;;;;;;;;
 MGL_colonial_company;Wai Menggu;;;;;;;;;;;;;
 MGL_colonial_company_3;Gaimoko;;;;;;;;;;;;;
 ALS_colonial_company;Elsass-Lothringen;;;;;;;;;;;;;
