--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2876,3 +2876,4 @@ witu_protectorate_title;The Witu Protectorate;;;;;;;;;;;;;
 witu_protectorate_desc;Our relation with the Witu Emirate has been growing for decades, and with the other powers encoraching on their sovereignty, it might be time to help them survive in this cruel world.;;;;;;;;;;;;;
 hehe_war_title;The Hehe War;;;;;;;;;;;;;
 hehe_war_desc;The Hehe have grown in power in southwestern Tanganyika for decades, and now they're a power to be reckoned with. As they're one of the last roadblocks to our expansion in the region, we should launch an invasion to end their kingdom once and for all.;;;;;;;;;;;;;
+MEDOKOREVOLTS;Shewa is in chaos. Repeated cholera epidemics, famines and Oromo raids have demoralized our army, and general Medoko has deserted with most of our matchlockmen to the Oromo. Angolalla is burning, and our kingdom is crumbling. We must act, now or never.;;;;;;;;;;;;;
