nerfed slavery, goshen, Kale-i Sultaniye., Ayintab

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9297,7 +9297,7 @@ PROV859;Gallipoli;Gallipoli;Gallipoli;;Gallípoli;;;;;;;;;
 PROV862;Izmit;Izmit;Izmit;;Yzmit;;;;;;;;;
 PROV863;Bursa;Bursa;Bursa;;Bursa;;;;;;;;;
 PROV864;Balikesir;Balikesir;Balikesir;;Balikesir;;;;;;;;;
-PROV865;Canakkale;Canakkale;Canakkale;;Canakkale;;;;;;;;;
+PROV865;Kale-i Sultaniye;Kale-i Sultaniye;Kale-i Sultaniye;;Kale-i Sultaniye;;;;;;;;;
 PROV866;Afyon;Afyon;Afyon;;Afyon;;;;;;;;;
 PROV867;Kütahya;Kütahya;Kutahya;;Kutahya;;;;;;;;;
 PROV868;Eskishehir;Eskishehir;Eskishehir;;Eskishehir;;;;;;;;;
@@ -9327,7 +9327,7 @@ PROV894;Adna;Adna;Adna;;Adna;;;;;;;;;
 PROV895;Silifke;Silifke;Silifke;;Silifke;;;;;;;;;
 PROV896;Marash;Marash;Marash;;Marash;;;;;;;;;
 PROV897;Halab;Halab;Halab;;Halab;;;;;;;;;
-PROV898;Antep;Gaziantep;Antep;;Antep;;;;;;;;;
+PROV898;Ayintab;Ayintab;Ayintab;;Ayintab;;;;;;;;;
 PROV899;Urfa;Urfa;Urfa;;Urfa;;;;;;;;;
 PROV901;Dayr al-Zour;Dayr al-Zour;Dayr al-Zour;;Dayr al-Zour;;;;;;;;;
 PROV902;Dimashq;Dimashq;Dimashq;;Dimashq;;;;;;;;;
