--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -4613,6 +4613,7 @@ EVTNAME199030;Fisheries in $PROVINCENAME$;;;;;;;;;;;;;
 EVTDESC199030;Unemployment among workers in $PROVINCENAME$ is high, and many have begun turning to the sea to eke out a living. Local officials are suggesting that the $COUNTRY_ADJ$ support them.;;;;;;;;;;;;;
 EVTNAME43646423;Decline of Trade in $PROVINCENAME$;;;;;;;;;;;;;
 EVTDESC43646423;Cities such as $PROVINCENAME$ which have been a great source of income for our state for years are now falling in decadence: the markets of $PROVINCENAME$ were once rich and full of people, but now they are only a shell of their former self. With our trading posts now not giving enough income for the population of $PROVINCENAME$ to survive in its current position, many have begun turning to fishing and farming to eke out a living.;;;;;;;;;;;;;
+EVTDESC43423442;Cities such as $PROVINCENAME$ which have been a great source of income for our state for years are now falling in decadence: the markets of $PROVINCENAME$ were once rich and full of slaves, but now their trade is becoming less and less profitable for the fall in demand...;;;;;;;;;;;;;
 EVTNAME43646424;Decline of Mining in $PROVINCENAME$;;;;;;;;;;;;;
 EVTDESC43646424;Our gold mines in $PROVINCENAME$ are running dry. With the prospect of losing their source of income, part of the regional working force has switched to farming. Should we close the mines?;;;;;;;;;;;;;
 EVTNAME199031;Lumber yards in $PROVINCENAME$;;;;;;;;;;;;;
