--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1763,3 +1763,24 @@ EVTDESC184825782;\n\nThe Kong have stopped any support to Tyefo and the revolt h
 EVTDESC184825792;\n\nThe Kong have stopped any support to Tyefo and the revolt has downscalled to guerrilla warfare.;;;;;;;;;;;;;
 EVTDESC184825843;\n\nAfter the revolt in their northern lands, they have decided to cede the administration of the region to our state.;;;;;;;;;;;;;
 EVTDESC184825853;\n\nWith our total control over Sakhalin and the Kurils, we can now claim it for ourselves.;;;;;;;;;;;;;
+EVTDESC60131;\n\n$FROM$ has decided we are not $FROMCOUNTRY_ADJ$ enough to join their state, not that we really wanted to anyway...;;;;;;;;;;;;;
+EVTDESC60132;\n\n$FROM$ can reconsider unification;;;;;;;;;;;;;
+EVTDESC60168162;\n\nCarlos V and his heirs rarely ascend to the throne of Spain. Do you like Carlist Spain more than regular Spain?;;;;;;;;;;;;;
+EVTDESC60168163;\n\nThe Oriental Crisis usually ends in Egypt losing control over the Middle East. Would you prefer a compromise?;;;;;;;;;;;;;
+EVTDESC60168164;\n\nBecause the concept is far-fetched at best, the Scandinavian War is set to never be triggered by AI. Would you, however, like to have it in your game?;;;;;;;;;;;;;
+EVTDESC60168165;\n\nMexico usually gets steamrolled by the American invasion. While the outcome of the war isn't determinable, do you want Mexico to hand the land over peacefully or for the the US to just leave them alone?;;;;;;;;;;;;;
+EVTDESC60168166;\n\nThe Iranian attempt to besiege Herat is usually foiled by British intervention. Do you prefer the UK leaving Iran alone?;;;;;;;;;;;;;
+EVTDESC60168167;\n\nWhen Hungary revolts in 1848, they rarely survive the war with Austria. Do you wish to prevent that war altogether or force Hungary to fight it out?;;;;;;;;;;;;;
+EVTDESC60168168;\n\nThe Oregon Dispute can end in a war, two compromises or one of the conflicting parties receiving all of the territory peacefully. How do you want it to go?;;;;;;;;;;;;;
+EVTDESC123934;\n\nCreated in 1542, the Captaincy General of Guatemala was given self-administration from New Spain to avoid the difficulty in administering two sides of a jungle. Shall we re-establish it?;;;;;;;;;;;;;
+EVTDESC718171;\n\nWhere should the capital be moved to?;;;;;;;;;;;;;
+EVTDESC123942;\n\nSpain has decided to give autonomy to the Captaincy General of Venezuela.;;;;;;;;;;;;;
+EVTDESC123525;\n\nTo decimate the Navaho raiders who so often attacked settlements in Arizona, the Navaho people have been marched to New Mexico for a new reservation only to march them back, thereby causing hundreds of deaths and weakening them permanently.;;;;;;;;;;;;;
+EVTDESC45678901;\n\nAfter years of influence in the region, it has finally amounted to full allegiance by the local rulers to the Sultan.;;;;;;;;;;;;;
+EVTDESC123565;\n\nWith total military victory over Mexico, the option to have them as a puppet government comes to debate.;;;;;;;;;;;;;
+EVTDESC4207101;\n\nAfter defeating the USA, the Louisiana Territory is under our control now, what should we do with it?;;;;;;;;;;;;;
+EVTDESC477877788;\n\nWe have acquired independence!;;;;;;;;;;;;;
+EVTDESC477877792;\n\nIf $FROMCOUNTRY$ is the country you want to interact with, select an option. Otherwise, select 'Next country' to cycle through, or select 'Exit options' to return to the game.;;;;;;;;;;;;;
+EVTDESC477877793;\n\nThis event lets your overlord interact with you. If you are a player, just close this.;;;;;;;;;;;;;
+WARSHIPCOMMISSIONWHICH;\n\nWe must decide what type of warship we wish to commission.;;;;;;;;;;;;;
+WARSHIPCOMMISSIONREADY;\n\nThe warship we commissioned is ready and arrived in one of our naval bases.;;;;;;;;;;;;;
