--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1352,7 +1352,7 @@ EVTDESC184900182;\n\nWaalo has refused to reinstating our treaty from 1825, our 
 EVTDESC18490020;\n\nFuta Jallon has started a Jihad against us, with the goal of ending our empire. May the Gabu Empire never fall.;;;;;;;;;;;;;
 EVTDESC18490021;\n\nKansala has fallen, as has the rest of the country. The empire is now no more, and we are at the hands of the Futa Jallon...;;;;;;;;;;;;;
 EVTDESC184900211;\n\nThe Tenda have agreed to cede Yimbering to us.;;;;;;;;;;;;;
-EVTDESC18490022;"\n\nWe are victorious, and it is time to realize our goal; it is time to claim the end of the Jihad in Gabu and Islamize the region.";;;;;;;;;;;;;
+EVTDESC18490022;\n\nWe are victorious, and it is time to realize our goal; it is time to claim the end of the Jihad in Gabu and Islamize the region.;;;;;;;;;;;;;
 EVTDESC18490026;\n\nIt is time to end al-Kanemi, and with the help of the Waddai we'll be invincible!;;;;;;;;;;;;;
 EVTDESC18490028;\n\nAfter we lost at Bornu, Wadai slowly started occupying our key positions behind the battlefield. Now with the war ending they have occupied us.;;;;;;;;;;;;;
 EVTDESC18490029;\n\nAfter we won at Kanem, we can now fully take over the Kanem-Bornu Empire!;;;;;;;;;;;;;
@@ -1360,7 +1360,7 @@ EVTDESC184900291;\n\nAfter we won at Kanem, we can now fully take over the Kanem
 EVTDESC18490030;\n\nThe French have taken Aboisso! Local Sanwi rulers have signed a pact with them without us knowing and they are now part of France.;;;;;;;;;;;;;
 EVTDESC184900311;\n\nThe Fante have agreed to our pact, but they refuse to become our protectorate. Should we force them or keep them independent?;;;;;;;;;;;;;
 EVTDESC184900313;\n\nOur pact to the British has been twisted and we have become their protectorate...;;;;;;;;;;;;;
-EVTDESC184900312;"\n\nWe had made a proposal to the Fante a month back; we'd protect them in exchange for keeping their independence. They have now refused and we could use this to our favour.";;;;;;;;;;;;;
+EVTDESC184900312;\n\nWe had made a proposal to the Fante a month back; we'd protect them in exchange for keeping their independence. They have now refused and we could use this to our favour.;;;;;;;;;;;;;
 EVTDESC18490032;\n\nThe French are trying to colonize Bokhe and they're asking us to hand them over.;;;;;;;;;;;;;
 EVTDESC184900321;\n\nThey haven't accepted our treaty to colonize the Guinean Coast. It might be time for war?;;;;;;;;;;;;;
 EVTDESC184900322;\n\nLocal rulers have accepted our demands and we now rule over part of the Guinean Coast.;;;;;;;;;;;;;
