--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1236,6 +1236,14 @@ JOR_radical;Al Anarkiliberali;;;;;;;;;;;;;
 JOR_socialist;Hizb al-Baath al-Ishtiraki al-Urduni;;;;;;;;;;;;;
 JOR_communist;Al-Hizb al-Shuyui al-Urduni;;;;;;;;;;;;;
 JOR_fascist;Hizb al-Mustaqbal;;;;;;;;;;;;;
+OBM;Wakasa;;;;;;;;;;;;;
+OBM_ADJ;Wakasan;;;;;;;;;;;;;
+OBM_absolute_monarchy;Obama;;;;;;;;;;;;;
+OBM_prussian_constitutionalism;Obama;;;;;;;;;;;;;
+OBM_hms_government;Obama;;;;;;;;;;;;;
+OBM_absolute_monarchy_ADJ;Sakai;;;;;;;;;;;;;
+OBM_prussian_constitutionalism_ADJ;Sakai;;;;;;;;;;;;;
+OBM_hms_government_ADJ;Sakai;;;;;;;;;;;;;
 KAG;Ishikawa;;;;;;;;;;;;;
 KAG_ADJ;Ishikawan;;;;;;;;;;;;;
 KAG_absolute_monarchy;Kaga;;;;;;;;;;;;;
