--- a/GFM/localisation/more localisation.csv
+++ b/GFM/localisation/more localisation.csv
@@ -159,6 +159,6 @@ NICOBAR_PURCHASE_DESC;\n\n$FROMCOUNTRY$ is offering us £50,000 in cash to buy th
 AGREE_TITLE;$FROMCOUNTRY$ Agrees;;;;;;;;;;;;;
 AGREE_DESC;\n\nWe now may make the most of these strategically significant islands! Perhaps a large naval base should be constructed there.;;;;;;;;;;;;;
 REFUSAL_TITLE;$FROMCOUNTRY$ Refuses;;;;;;;;;;;;;
-REFUSAL_DESC;They must have decided the islands are too important to them.;;;;;;;;;;;;;
+REFUSAL_DESC;\n\nThey must have decided the islands are too important to them.;;;;;;;;;;;;;
 tondenhei_title;Recruit Tondenhei to Settle in Hokkaido;;;;;;;;;;;;;
 tondenhei_desc;To strengthen our presence in the frontier territory of Hokkaido, we need more settlers there. To that end, we can recruit ex-samurai and their families to move to Hokkaido, allocating a six-acre plot to each family. There's added benefit also in specifically recruiting ex-samurai, since they make ideal reservists to call up at a moment's notice. They can be charged with keeping the peace in case of ethnic tension with Hokkaido's indigenous Ainu.;;;;;;;;;;;;;
