--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1084,17 +1084,15 @@ AOS_proletarian_dictatorship_ADJ;Valdostan;;;;;;;;;;;;;
 AOS_democracy;The Republic of Aosta Valley;;;;;;;;;;;;;
 AOS_democracy_ADJ;Aostan;;;;;;;;;;;;;
 AOS_presidential_dictatorship;The Valdostan Republic;;;;;;;;;;;;;
-SOC;So;;;;;;;;;;;;;
-SOC_absolute_monarchy;So;;;;;;;;;;;;;
-SOC_hms_government;So;;;;;;;;;;;;;
-SOC_prussian_constitutionalism;So;;;;;;;;;;;;;
-SOC_ADJ;So;;;;;;;;;;;;;
-SOC_fascist_dictatorship;Imperial So;;;;;;;;;;;;;
-SOC_proletarian_dictatorship;Peoples Republic of Tsushima;;;;;;;;;;;;;
-SOC_proletarian_dictatorship_ADJ;Tsushima;;;;;;;;;;;;;
-SOC_democracy;The Republic of Tsushima;;;;;;;;;;;;;
-SOC_democracy_ADJ;Tsushima;;;;;;;;;;;;;
-SOC_presidential_dictatorship;The Tsushima Republic;;;;;;;;;;;;;
+SOC;Tsushima;;;;;;;;;;;;;
+SOC_absolute_monarchy;Tsushima;;;;;;;;;;;;;
+SOC_hms_government;Tsushima;;;;;;;;;;;;;
+SOC_prussian_constitutionalism;Tsushima;;;;;;;;;;;;;
+SOC_absolute_monarchy_ADJ;So;;;;;;;;;;;;;
+SOC_hms_government_ADJ;So;;;;;;;;;;;;;
+SOC_prussian_constitutionalism_ADJ;So;;;;;;;;;;;;;
+SOC_ADJ;Tsushima;;;;;;;;;;;;;
+SOC_proletarian_dictatorship;People's Republic of Tsushima;;;;;;;;;;;;;
 ARK;Arkhangelsk;;;;;;;;;;;;;
 ARK_absolute_monarchy;The Kingdom of Arkhangelsk;;;;;;;;;;;;;
 ARK_hms_government;Arkhangelsk;;;;;;;;;;;;;
