important warning for idiotic decision

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -398,7 +398,7 @@ switch_to_japanese_tech_school_desc;$COUNTRY$'s militaristic attitude intensifie
 first_japanese_embassy_title;Send the First Japanese Embassy to Europe;;;;;;;;;;;;;
 first_japanese_embassy_desc;We have no choice but to recognize and establish relations with Europe to avoid being dominated by them. Using some clever negotiating, we might be able to both ourselves to them and reach an agreement to postpone the complete opening of our ports.;;;;;;;;;;;;;
 second_japanese_embassy_title;Send the Second Japanese Embassy to Europe;;;;;;;;;;;;;
-second_japanese_embassy_desc;Our first diplomatic mission to Europe has returned, and the results of it are what they are. Yet our legitimacy on the international stage still needs to be firmly cemented. We will send another embassy, and this time we will have a more ambitious goal: negotiating the reinstatement of Sakoku.;;;;;;;;;;;;;
+second_japanese_embassy_desc;Our first diplomatic mission to Europe has returned, and the results of it are what they are. Yet our legitimacy on the international stage still needs to be firmly cemented. We will send another embassy, and this time we will have a more ambitious goal: negotiating the reinstatement of Sakoku. §RTHIS CAN RE-ESTABLISH ISOLATIONISM§W;;;;;;;;;;;;;
 third_japanese_embassy_title;Send a Diplomatic Mission to the United States;;;;;;;;;;;;;
 third_japanese_embassy_desc;The American giant breathes down our neck from across the ocean. Their intentions in interacting with us are not to be trusted, but we can certainly try to get on their good side in the meantime. They are also an emerging superpower, so learning more about their culture and industry would greatly benefit us.;;;;;;;;;;;;;
 limburg_crisis;Limburg Crisis;;;;;;;;;;;;;
