A lot of random stuff, and I mean a lot

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4288,3 +4288,13 @@ TRI_constitutional_empire;Tripoli;;;;;;;;;;;;;
 TRI_constitutional_empire_ADJ;Tripolitanian;;;;;;;;;;;;;
 TRI_democracy;Tripolitanian Republic;;;;;;;;;;;;;
 TRI_democracy_ADJ;Tripolitanian;;;;;;;;;;;;;
+ADL;Adal;;;;;;;;;;;;;
+ADL_absolute_monarchy;The Adal Sultanate;;;;;;;;;;;;;
+ADL_prussian_constitutionalism;The Adal Sultanate;;;;;;;;;;;;;
+ADL_hms_government;The Adal Sultanate;;;;;;;;;;;;;
+ADL_democracy;Adal Republic;;;;;;;;;;;;;
+ADL_ADJ;Zaylan;;;;;;;;;;;;;
+ADL_absolute_empire;The Adal Empire;;;;;;;;;;;;;
+ADL_semi_constitutional_empire;The Adal Empire;;;;;;;;;;;;;
+ADL_constitutional_empire;The Adal Empire;;;;;;;;;;;;;
+ADL_theocracy;The Adal Caliphate;;;;;;;;;;;;;
