--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1214,11 +1214,11 @@ JAP_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
 JAP_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_proletarian_dictatorship;The People's Republic of Japan;;;;;;;;;;;;;
 JAP_proletarian_dictatorship_ADJ;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_prussian_constitutionalism;The Shogunate of Japan;;;;;;;;;;;;;
+JAP_prussian_constitutionalism;The Tokugawa Shogunate;;;;;;;;;;;;;
 JAP_prussian_constitutionalism_ADJ;Tokugawa;;;;;;;;;;;;;
-JAP_absolute_monarchy;The Shogunate of Japan;;;;;;;;;;;;;
+JAP_absolute_monarchy;The Tokugawa Shogunate;;;;;;;;;;;;;
 JAP_absolute_monarchy_ADJ;Tokugawa;;;;;;;;;;;;;
-JAP_hms_government;The Shogunate of Japan;;;;;;;;;;;;;
+JAP_hms_government;The Tokugawa Shogunate;;;;;;;;;;;;;
 JAP_hms_government_ADJ;Tokugawa;;;;;;;;;;;;;
 JAP_reactionary;Handoutou;Faction Shogunate;Shogunate Faction;;;;;;;;;;;
 JAP_conservative;Rikken Teiseitou;Faction de la cour;Court Faction;;;;;;;;;;;
