--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -129,6 +129,8 @@ PROV4028;Preah Sihanouk;;;;;;;;;
 PROV4025;Kampong Thom;;;;;;;;;
 PROV522;Leiria;;;;;;;;;
 PUR;Purran;;;;;;;;;
+BRZ_colonial_company_2;France Antarctique;;;;;;;;;
+PAA_colonial_company_2;France Équinoxiale;;;;;;;;;
 PUR_ADJ;Tshoneka;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
