yes, fixed algeria turkey

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2894,3 +2894,4 @@ launch_it_ADL_title;Defeat the Habasans;;;;;;;;;;;;;
 launch_it_ADL_desc;§RGain 15 infamy§! The Abyssinians have been infidels for too long, they have resisted conversion for centuries and only defeated the first Great Adal through treaties with the once-powerful Portuguese. Now that we control the southern hills and mountains of what they call their homeland, it's time to declare a new empire and bring Abyssinia under our control once and for all. For Islam!;;;;;;;;;;;;;
 settle_down_ADL_title;Declare the Caliphate of the Adal;;;;;;;;;;;;;
 settle_down_ADL_desc;§RGain 5 infamy§! Adal is now the greatest power in the recent history of Islam, and we must act that way. To encourage further conversions into Islam, it's time to declare a Caliphate in all rights.;;;;;;;;;;;;;
+EVTDESC18482549;After numerous battles, we have finally won the war in Algeria and we can now sign a treaty to define our influence.;;;;;;;;;;;;;
