last adjusts, loc

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2895,3 +2895,6 @@ launch_it_ADL_desc;§RGain 15 infamy§! The Abyssinians have been infidels for too
 settle_down_ADL_title;Declare the Caliphate of the Adal;;;;;;;;;;;;;
 settle_down_ADL_desc;§RGain 5 infamy§! Adal is now the greatest power in the recent history of Islam, and we must act that way. To encourage further conversions into Islam, it's time to declare a Caliphate in all rights.;;;;;;;;;;;;;
 EVTDESC18482549;After numerous battles, we have finally won the war in Algeria and we can now sign a treaty to define our influence.;;;;;;;;;;;;;
+HELLOALGIERSYOUREDONE;The Turks have started preparations for an invasion of Algeria, and have sent an ultimatum demanding our surrender. How should we respond?;;;;;;;;;;;;;
+YOUREGOINGDOWNALGIERS;$FROMCOUNTRY$ has refused to surrender, ignoring our threats of invasion or our united destiny. How should we respond?;;;;;;;;;;;;;
+ALGERIACENTRALIZED;The Beylik of Algiers never was a sole, centralized unit of power, but the current winds of colonization ask for strong colonial possessions, and we subdivide Algeria into more than 2 different possessions. Should we change that?;;;;;;;;;;;;;
