--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -34,7 +34,7 @@ PROV2689;Vorkuta;;;;;;;;;;;;;
 PROV3295;Pematang Siantar;;;;;;;;;;;;;
 PROV3296;Kipula;;;;;;;;;;;;;
 PROV3297;Old Shanghai;;;;;;;;;;;;;
-PROV3298;Ayteke Bi;;;;;;;;;;;;;
+PROV3298;Kanbakty;;;;;;;;;;;;;
 PROV3299;Aksai Chin;;;;;;;;;;;;;
 PROV3300;Dayr al-Zawr;;;;;;;;;;;;;
 PROV3301;Mudanya;;;;;;;;;;;;;
@@ -175,7 +175,7 @@ PROV3437;Dzhankóy;;;;;;;;;;;;;
 PROV3438;Yálta;;;;;;;;;;;;;
 PROV3439;Feodosiya;;;;;;;;;;;;;
 PROV3440;Longking;;;;;;;;;;;;;
-PROV3441;Gazli;;;;;;;;;;;;;
+PROV3441;Shimbay;;;;;;;;;;;;;
 PROV3442;Darvaza;;;;;;;;;;;;;
 PROV3447;Coto;;;;;;;;;;;;;
 PROV3469;Flatow;;;;;;;;;;;;;
@@ -338,7 +338,7 @@ PROV3260;Sado;;;;;;;;;;;;;
 PROV1531;Tombara;;;;;;;;;;;;;
 PROV2537;Birara;;;;;;;;;;;;;
 PROV158;Onigamiinsing;;;;;;;;;;;;;
-PROV29;Kyzylkum;;;;;;;;;;;;;
+PROV29;Mingbulak;;;;;;;;;;;;;
 PROV2595;York Factory;;;;;;;;;;;;;
 PROV25;Mohkínstsis;;;;;;;;;;;;;
 PROV6;Tr'ondëk Hwëch'in;;;;;;;;;;;;;
@@ -388,7 +388,7 @@ PROV130;Tha'tse Mathi';;;;;;;;;;;;;
 PROV111;Tukudeka;;;;;;;;;;;;;
 PROV112;Mitsiadazi;;;;;;;;;;;;;
 PROV106;Vétaneo'hé'e;;;;;;;;;;;;;
-PROV2702;Alty-Kuduk;;;;;;;;;;;;;
+PROV2702;Shalkar;;;;;;;;;;;;;
 PROV686;Merv;;;;;;;;;;;;;
 BUR_1334;Mandalay;;;;;;;;;;;;;
 PROV579;Chiloé;;;;;;;;;;;;;
@@ -1147,7 +1147,7 @@ PROV3781;Kavanruyen;;;;;;;;;;;;;
 PROV3782;Warkhokh;;;;;;;;;;;;;
 PROV3783;Mbul;;;;;;;;;;;;;
 PROV3784;Gudiri;;;;;;;;;;;;;
-PROV3785;Udarnik;;;;;;;;;;;;;
+PROV3785;Üçajy;;;;;;;;;;;;;
 PROV3786;Bababe;;;;;;;;;;;;;
 PROV3787;Xhouma;;;;;;;;;;;;;
 PROV3788;Rharus;;;;;;;;;;;;;
@@ -1301,7 +1301,7 @@ RUS_1025;Tambov;;;;;;;;;;;;;
 PROV3906;Rudolstadt;;;;;;;;;;;;;
 PROV3907;Bakhmut;;;;;;;;;;;;;
 PROV3908;Priluki;;;;;;;;;;;;;
-PROV3913;Shyganak;;;;;;;;;;;;;
+PROV3913;Shu;;;;;;;;;;;;;
 PROV3914;Kochkor;;;;;;;;;;;;;
 PROV3915;Atush;;;;;;;;;;;;;
 PROV3916;al-Ain;;;;;;;;;;;;;
