blue screen of happiness

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -651,9 +651,12 @@ ARA_fascist;Al Fashi;;;;;;;;;;;;;
 ARU;Arab Union;;;;;;;;;;;;;
 ARU_ADJ;Arabic;;;;;;;;;;;;;
 ARU_theocracy;The Arab Caliphate;;;;;;;;;;;;;
-ARU_absolute_empire;The Arab Empire;;;;;;;;;;;;;
-ARU_semi_constitutional_empire;The Arab Empire;;;;;;;;;;;;;
-ARU_constitutional_empire;The Arab Empire;;;;;;;;;;;;;
+ARU_absolute_empire;The Sohar Sultanate;;;;;;;;;;;;;
+ARU_absolute_empire_ADJ;Yarubid;;;;;;;;;;;;;
+ARU_semi_constitutional_empire;The Sohar Sultanate;;;;;;;;;;;;;
+ARU_semi_constitutional_empire_ADJ;Yarubid;;;;;;;;;;;;;
+ARU_constitutional_empire;The Sohar Sultanate;;;;;;;;;;;;;
+ARU_constitutional_empire_ADJ;Yarubid;;;;;;;;;;;;;
 ARU_proletarian_dictatorship;Arab People's Republic;;;;;;;;;;;;;
 ARU_fascist_dictatorship;Arab Republic;;;;;;;;;;;;;
 ARU_parliamentary_republic;Arab Republic;;;;;;;;;;;;;
