--- a/GFM/localisation/FlavoursModNewCountries.csv
+++ b/GFM/localisation/FlavoursModNewCountries.csv
@@ -253,6 +253,7 @@ EGY_prussian_constitutionalism;The Egyptian Kingdom;;;;;;;;;;;;;
 EGY_hms_government;The Egyptian Kingdom;;;;;;;;;;;;;
 SYR_dominion;Grand Liban;;;;;;;;;;;;;
 HDJ_dominion;Sharifate of Mecca;;;;;;;;;;;;;
+HDJ_colonial_company_2;Sharifate of Mecca;;;;;;;;;;;;;
 HDJ_absolute_monarchy;Hashemite Kingdom of Hejaz;;;;;;;;;;;;;
 HDJ_prussian_constitutionalism;Hashemite Kingdom of Hejaz;;;;;;;;;;;;;
 HDJ_hms_government;Hashemite Kingdom of Hejaz;;;;;;;;;;;;;
