--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9844,7 +9844,7 @@ PROV1590;Lhodrak;Lhodrak;Lhodrak;;Lhodrak;;;;;;;;;
 PROV1591;Domar;Domar;Domar;;Domar;;;;;;;;;
 PROV1592;Ngari;Ngari;Ngari;;Ngari;;;;;;;;;
 PROV1593;Tawang;Tawang;Tawang;;Tawang;;;;;;;;;
-PROV1595;Kulja;Kulja;Kulja;;Kulja;;;;;;;;;
+PROV1595;Bortala;Bortala;Bortala;;Bortala;;;;;;;;;
 PROV1596;Altay;Altay;Altay;;Altay;;;;;;;;;
 PROV1597;Aksu;Aksu;Aksu;;Aksu;;;;;;;;;
 PROV1598;Hotien;Hotien;Hotien;;Hotien;;;;;;;;;
