More History and setup changes

--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -62,26 +62,26 @@ PROV1138;Kangan;;;;;;;;;;;;;
 PROV1141;Hajjiabad;;;;;;;;;;;;;
 PROV1145;Bunpoor;;;;;;;;;;;;;
 PROV1158;al-Nefud;;;;;;;;;;;;;
-PROV1185;Shu;;;;;;;;;;;;;
+PROV1185;Taraz;;;;;;;;;;;;;
 PROV1186;Alma Ata;;;;;;;;;;;;;
 PROV1188;Qaratal;;;;;;;;;;;;;
 PROV1189;Bishkek;;;;;;;;;;;;;
-PROV1190;Kyzylsu;;;;;;;;;;;;;
+PROV1190;Kyzylsuu;;;;;;;;;;;;;
 PROV1191;Khiva;;;;;;;;;;;;;
 PROV1192;Qongrat;;;;;;;;;;;;;
 PROV1193;Ak-Mechet;;;;;;;;;;;;;
 PROV1194;Kuryk;;;;;;;;;;;;;
 PROV1195;Tashkent;;;;;;;;;;;;;
-PROV1196;Dashhowuz;;;;;;;;;;;;;
+PROV1196;Damly;;;;;;;;;;;;;
 PROV1197;Turkestan;;;;;;;;;;;;;
 PROV1198;Bukhoro;;;;;;;;;;;;;
-PROV1199;Samarkand;;;;;;;;;;;;;
+PROV1199;Samarqand;;;;;;;;;;;;;
 PROV1200;Qarshi;;;;;;;;;;;;;
 PROV1201;Khojand;;;;;;;;;;;;;
 PROV1202;Kokand;;;;;;;;;;;;;
 PROV1203;Osh;;;;;;;;;;;;;
 PROV1204;Ashqabat;;;;;;;;;;;;;
-PROV1205;Kyzyl-Su;;;;;;;;;;;;;
+PROV1205;Bekdash;;;;;;;;;;;;;
 PROV1206;Merv;;;;;;;;;;;;;
 PROV1207;Kulob;;;;;;;;;;;;;
 PROV1208;Khorug;;;;;;;;;;;;;
@@ -209,3 +209,17 @@ PROV3077;Arafure Sea;;;;;;;;;;;;;
 PROV979;Taganrog;;;;;;;;;;;;;
 PROV1047;Rostov;;;;;;;;;;;;;
 PROV4126;Meshkeli;;;;;;;;;;;;;
+PROV4127;Tamby;;;;;;;;;;;;;
+PROV4128;Nurata;;;;;;;;;;;;;
+PROV4129;Jizakh;;;;;;;;;;;;;
+PROV4130;Panjakand;;;;;;;;;;;;;
+PROV4131;Dehnav;;;;;;;;;;;;;
+PROV4132;Kilif;;;;;;;;;;;;;
+PROV4133;Taleqan;;;;;;;;;;;;;
+PROV4134;Shaikh Dara;;;;;;;;;;;;;
+PROV4135;Andijan;;;;;;;;;;;;;
+PROV4136;Namagan;;;;;;;;;;;;;
+PROV4137;Merke;;;;;;;;;;;;;
+PROV4138;Tamshybulak;;;;;;;;;;;;;
+PROV4139;Ili;;;;;;;;;;;;;
+PROV4140;Alty-Kuduk;;;;;;;;;;;;;
