--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -66,7 +66,7 @@ PROV1185;Taraz;;;;;;;;;;;;;
 PROV1186;Alma Ata;;;;;;;;;;;;;
 PROV1188;Qaratal;;;;;;;;;;;;;
 PROV1189;Bishkek;;;;;;;;;;;;;
-PROV1190;Kyzylsuu;;;;;;;;;;;;;
+PROV1190;Kyzylsu;;;;;;;;;;;;;
 PROV1191;Khiva;;;;;;;;;;;;;
 PROV1192;Qongrat;;;;;;;;;;;;;
 PROV1193;Ak-Mechet;;;;;;;;;;;;;
